# pyvet

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yaml  unit_tests.yaml
docs/explanation/: authorization.md  cache.md  token_scheduler.md
docs/how-to/: installation.md  run_tests.md
docs/reference/: architecture.md  style.md
docs/tutorials/: explore_pyvet.ipynb  oauth2_apis.md  open_data_apis.md  quick_start.md
pyvet/: benefits_intake.py  benefits_reference.py  client.py  creds.py  facilities.py  file_submission_schemas.py  health.py  json_alias.py  token_scheduler.py
pyvet/appeals/: api.py
pyvet/benefits/: api.py
pyvet/benefits/claims/: api.py
pyvet/benefits/intake/: api.py
pyvet/benefits/reference/: api.py
pyvet/benefits_intake/: api.py
pyvet/benefits_reference/: api.py
pyvet/facilities/: api.py
pyvet/forms/: api.py
pyvet/health/: api.py
pyvet/health/community_care/: api.py
pyvet/health/patient_health/: api.py
pyvet/health/provider/: api.py
pyvet/veteran/confirmation/: api.py
pyvet/veteran_confirmation/: api.py
pyvet/veteran_verification/: api.py
tests/: test_benefits_intake.py  test_benefits_reference.py  test_client_session.py  test_facilities.py  test_forms.py  test_health_provider_directory.py  test_veteran_confirmation.py
tests/benefits/: test_benefits_claims.py  test_benefits_intake.py  test_benefits_reference.py
tests/data/: mock_benefits_claims.py  mock_benefits_reference.py  mock_facilities.py  mock_forms_data.py  mock_health_data.py  mock_patient_data.py
tests/facilities/: test_facilities.py
tests/forms/: test_forms.py
tests/health/: test_community_care.py  test_health_provider_directory.py  test_patient.py
tests/mock_uploads_data/: test_main_content.txt
tests/veteran/: test_veteran_confirmation.py  test_veteran_verification.py
(+2 files in other folders)
