[tool.poetry]
name = "pyvet"
version = "0.1.0"
description = "Python library to retrieve veteran data from the Department of Veterans Affairs"
authors = ["cterrazas2 <12790854+cterrazas2@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.0"
oidc-client = "^0.2.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^1.2.0"
bandit = "^1.7.5"
codespell = "^2.2.4"
pre-commit = ">=2.3.0"
coverage = "^7.2.4"
pytest = "^7.3.1"
types-requests = "^2.29.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
